libs/extractor/src/snapshots/extractor__tests__extract_just_tsx-2.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\", \"<Box gap={1} />\", ExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false\n},).unwrap())"
---
ToBTreeSet {
    styles: {},
    code: "<Box gap={1} />",
}
