libs/extractor/src/snapshots/extractor__tests__extract_just_tsx.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\", \"const a = 1;\", ExtractOption\n{ package: \"@devup-ui/core\".to_string(), css_file: None },).unwrap())"
---
ToBTreeSet {
    styles: {},
    code: "const a = 1;",
}
